--- a/example/docker-compose.yml
+++ b/example/docker-compose.yml
@@ -21,7 +21,12 @@ services:
     restart: on-failure
 
     labels:
+      # The following keys are all required for all exposed services.
       - traefik.enable=true
+      - traefik.http.routers.simple.entrypoints=https
+      - traefik.http.routers.simple.tls=true
+      - traefik.http.routers.simple.tls.certresolver=le
+
       # The default subdomain is generated from the container name and project
       # name (simple-example for this service). You can provide a different name
       # using this setting.
