--- a/keycloak/docker-compose.yml
+++ b/keycloak/docker-compose.yml
@@ -10,8 +10,9 @@ services:
     labels:
       - traefik.enable=true
       - traefik.subdomain=keycloak
-    #volumes:
-      #- /etc/localtime:/etc/localtime:ro
+      - traefik.http.routers.keycloak.entrypoints=https
+      - traefik.http.routers.keycloak.tls=true
+      - traefik.http.routers.keycloak.tls.certresolver=le
     depends_on:
       - db
     networks:
@@ -24,7 +25,6 @@ services:
     image: postgres:10.1
     volumes:
       - ${DATA_DIR}/keycloak/db:/var/lib/postgresql/data
-      #- /etc/localtime:/etc/localtime:ro
     networks:
       - internal
     restart: on-failure
@@ -33,7 +33,7 @@ services:
     image: funkypenguin/traefik-forward-auth
     env_file: ./forward-auth.env
     environment:
-      - OIDC_ISSUER=http://keycloak.${BASE_DOMAIN}/auth/realms/master
+      - OIDC_ISSUER=https://keycloak.${BASE_DOMAIN}/auth/realms/master
       - AUTH_HOST=forwardauth.${BASE_DOMAIN}
       - COOKIE_DOMAINS=${BASE_DOMAIN}
     networks:
@@ -45,6 +45,8 @@ services:
       - traefik.enable=true
       - traefik.http.services.auth.loadbalancer.server.port=4181
       - traefik.subdomain=forwardauth
+      - traefik.http.routers.auth.tls=true
+      - traefik.http.routers.auth.tls.certresolver=le
       # The auth router actually needs to use itself as a middleware.
       - traefik.http.routers.auth.middlewares=auth@docker
       - traefik.http.middlewares.auth.forwardauth.address=http://forwardauth:4181/auth
@@ -53,6 +55,9 @@ services:
       - traefik.http.routers.api.rule=Host(`traefik.${BASE_DOMAIN}`)
       - traefik.http.routers.api.middlewares=auth@docker
       - traefik.http.routers.api.service=api@internal
+      - traefik.http.routers.api.entrypoints=https
+      - traefik.http.routers.api.tls=true
+      - traefik.http.routers.api.tls.certresolver=le
     entrypoint: |-
       sh -c 'sh -s <<EOF
       trap "break;exit" SIGHUP SIGINT SIGTERM
