--- a/chess2/docker-compose.yml
+++ b/chess2/docker-compose.yml
@@ -11,7 +11,10 @@ services:
     restart: on-failure
     labels:
       - traefik.enable=true
-      - traefik.http.routers.simple.rule=Host(`api.chess2online.com`)
+      - traefik.http.routers.chess2.entrypoints=https
+      - traefik.http.routers.chess2.tls=true
+      - traefik.http.routers.chess2.tls.certresolver=le
+      - traefik.http.routers.chess2.rule=Host(`api.chess2online.com`)
 
 networks:
   traefik:
