--- a/heimdall/docker-compose.prod.yml
+++ b/heimdall/docker-compose.prod.yml
@@ -4,9 +4,9 @@ services:
   heimdall:
     labels:
       - traefik.enable=true
-      - traefik.http.routers.simple.entrypoints=https
-      - traefik.http.routers.simple.tls=true
-      - traefik.http.routers.simple.tls.certresolver=le
-      - traefik.http.routers.simple.rule=Host(`${BASE_DOMAIN}`)
-      - traefik.http.services.simple.loadbalancer.server.port=80
-      - traefik.http.routers.simple.middlewares=auth@docker
+      - traefik.http.routers.heimdall.entrypoints=https
+      - traefik.http.routers.heimdall.tls=true
+      - traefik.http.routers.heimdall.tls.certresolver=le
+      - traefik.http.routers.heimdall.rule=Host(`${BASE_DOMAIN}`)
+      - traefik.http.services.heimdall.loadbalancer.server.port=80
+      - traefik.http.routers.heimdall.middlewares=auth@docker
