Change keycloak restart policy
Every month or so, keycloak seems to die randomly. The logs just
indicate a random SIGKILL. Possibly from OOM? Unclear. Setting the
restart policy to "always" to hopefully bypass this.

--- a/keycloak/docker-compose.yml
+++ b/keycloak/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     networks:
       - internal
       - traefik
-    restart: on-failure
+    restart: always
 
   db:
     env_file: ./keycloak.env
