--- a/rabbitmq/docker-compose.yml
+++ b/rabbitmq/docker-compose.yml
@@ -4,14 +4,10 @@ services:
 
   # This is the simplest possible exposed service. It does not rely on any other
   # containers and does not require access control.
-  example:
-    image: containous/whoami
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
     volumes:
-      # For configuration volumes checked into the repository, use relative
-      # paths.
-      - ./config.toml:/app/config.toml
-      # For data volumes, use the DATA_DIR environment variable.
-      - ${DATA_DIR}/example:/data
+      - ${DATA_DIR}/rabbitmq:/var/lib/rabbitmq
     networks:
       - traefik
       # If you need a private network to orchestrate several containers, specify
@@ -20,26 +16,16 @@ services:
       - internal
     restart: on-failure
     labels:
-      # Labels are used to indicate to Traefik how the service is exposed to
-      # the internet. In all of the labels, `example` must be replaced with a
-      # unique name for the service being exposed.
       - traefik.enable=true
-
-      # The default subdomain is generated from the container name and project
-      # name (example-example for this service). You can provide a different
-      # name using this setting.
-      #- traefik.subdomain=example
+      - traefik.subdomain=rabbitmq
 
       # If the service exposes more than a single port, you must specify which
       # one is the HTTP port using this.
-      #- traefik.http.services.example.loadbalancer.server.port=80
-
-      # If this isn't enough flexibility you can also set a custom rule.
-      #- traefik.http.routers.example.rule=Host(`example.com`)
+      - traefik.http.services.rabbitmq.loadbalancer.server.port=15672
 
       # For services where you want to use the system-level access control, just
       # enable the middleware.
-      #- traefik.http.routers.example.middlewares=auth@docker
+      #- traefik.http.routers.rabbitmq.middlewares=auth@docker
 
 networks:
   # This network has to be pulled in from outside into every container that
