--- a/infra/master_user_data.yaml
+++ b/infra/master_user_data.yaml
@@ -10,7 +10,7 @@ users:
   - name: ubuntu
     sudo: "ALL=(ALL:ALL) NOPASSWD:ALL"
     shell: /bin/bash
-    groups: [docker]
+    groups: [adm,docker]
 runcmd:
   - "mkdir /home/ubuntu/.ssh"
   - "chmod 750 /home/ubuntu/.ssh"
