Some updates and adding launa

--- a/robo.yml
+++ b/robo.yml
@@ -17,3 +17,8 @@ setup-dns:
     d.add SupplementalMatchDomains * consul
     set State:/Network/Service/Consul/DNS
     EOF
+
+docker-tags:
+  summary: list docker tags of named image
+  command: |
+    curl -sSL https://registry.hub.docker.com/v1/repositories/$1/tags | jq -r 'map(.name)|join("\n")' | sort
