--- a/private-server/robo.yml
+++ b/private-server/robo.yml
@@ -2,3 +2,38 @@ new-template:
   summary: Create a new machine from a stock image
   command: |
     ./template-user-data.py | hcloud server create --image ubuntu-22.04 --type cx21 --name server-template --datacenter nbg1-dc3 --user-data-from-file -
+
+resize-drive:
+  summary: Resize the local root partition
+  command: |
+    partition="$(findmnt / -no SOURCE)"
+    drive="$(echo $partition | sed 's/[0-9]*$//')"
+    sp="$(sudo blockdev --getsz "$partition")"
+    sd="$(sudo blockdev --getsz "$drive")"
+    if [ -z "$1" ]; then
+      echo "Partition is $((sp*512/1024/1024/1024))GiB / $((sd*512/1024/1024/1024))GiB"
+      echo "Run again specifying the new size to resize"
+    else
+      # Ensure the new size in (in sectors) is valid.
+      new_size="$(($1 * 1024 * 1024 * 1024 / 512))"
+      if [ $sp -ge $new_size ]; then
+        echo "Refusing to shrink partition" >&2
+        exit 1
+      fi
+      np="${partition##$drive}"
+      echo ", ${1}Gib" | sudo sfdisk -f -N $np $drive
+      # Note: this would maximize the partition
+      #echo ", +"
+      sudo partprobe $drive
+      # Resize the FS
+      fs="$(findmnt / -no FSTYPE)"
+      case $fs in
+        ext*)
+          sudo resize2fs $partition
+          ;;
+        *)
+          echo "Warning: do not know how to resize $fs" 2>&1
+          exit 1
+          ;;
+      esac
+    fi
