--- a/robo.yml
+++ b/robo.yml
@@ -1,3 +1,11 @@
+production:
+  summary: perform actions on production infrastructure
+  command: TF_WORKSPACE=default robo -c robo.actions.yml "$@"
+
+staging:
+  summary: perform actions on staging infrastructure
+  command: TF_WORKSPACE=staging robo -c robo.actions.yml "$@"
+
 deploy:
   summary: deploy one or more jobs
   command: exec scripts/levant.sh deploy "$@"
@@ -22,3 +30,12 @@ docker-tags:
   summary: list docker tags of named image
   command: |
     curl -sSL https://registry.hub.docker.com/v1/repositories/$1/tags | jq -r 'map(.name)|join("\n")' | sort
+
+integration-test:
+  summary: Complete integration test in staging environment
+  command: |
+    robo staging terraform-infra apply -auto-approve
+    # Give some time for ssh to come up. Doesn't slow us down because
+    # cloud-init takes time to finish anyways.
+    sleep 10
+    ANSIBLE_HOST_KEY_CHECKING=False robo staging ansible
