--- a/robo.actions.yml
+++ b/robo.actions.yml
@@ -12,10 +12,16 @@ master_ip:
 
 ansible:
   summary: sync all configuration files on all servers
-  command: ansible-playbook -u ubuntu -i $(robo -c {{ .robo.file }} master_ip), -e DC=nbg1 -e wireguard_ip=172.30.0.1 ansible/site.yml "$@"
+  command: ansible-playbook -u ubuntu -i $(robo -c {{ .robo.file }} master_ip), -e DC=nbg1 -e wireguard_ip={{ .wireguard_ip }} ansible/site.yml "$@"
   examples:
     - description: Preview changes
       command: robo ansible -CD
     - description: Apply changes
       command: robo ansible
 
+verify:
+  summary: Verify that services are all working
+  command: ansible-playbook -u ubuntu -i $(robo -c {{ .robo.file }} master_ip), -e DC=nbg1 -e wireguard_ip={{ .wireguard_ip }} ansible/playbooks/verify.yml "$@"
+
+variables:
+  wireguard_ip: 172.30.0.1
