--- a/robo.actions.yml
+++ b/robo.actions.yml
@@ -1,6 +1,6 @@
 terraform-infra:
   summary: ensure that all cloud resources are up to date
-  command: terraform -chdir={{ .robo.path }}/infra "$@" -var-file=$TF_WORKSPACE.tfvars
+  command: terraform -chdir={{ .robo.path }}/infra "$@"
   examples:
     - description: Preview infrastructure changes
       command: robo terraform-infra plan
@@ -12,7 +12,7 @@ master_ip:
 
 ansible:
   summary: sync all configuration files on all servers
-  command: ansible-playbook -u ubuntu -i $(robo -c {{ .robo.file }} master_ip), -e DC=nbg1 -e wireguard_ip={{ .wireguard_ip }} ansible/site.yml "$@"
+  command: ansible-playbook -u ubuntu -i $(robo -c {{ .robo.file }} master_ip), {{ .ansible_variables }} ansible/site.yml "$@"
   examples:
     - description: Preview changes
       command: robo ansible -CD
@@ -21,7 +21,7 @@ ansible:
 
 verify:
   summary: Verify that services are all working
-  command: ansible-playbook -u ubuntu -i $(robo -c {{ .robo.file }} master_ip), -e DC=nbg1 -e wireguard_ip={{ .wireguard_ip }} ansible/playbooks/verify.yml "$@"
+  command: ansible-playbook -u ubuntu -i $(robo -c {{ .robo.file }} master_ip), {{ .ansible_variables }} ansible/playbooks/verify.yml "$@"
 
 variables:
-  wireguard_ip: 172.30.0.1
+  ansible_variables: -e DC=nbg1 -e wireguard_ip=172.30.0.1 -e traefik_domain=$BASE_DOMAIN
