--- a/nomad/chess2online/tasks.yml
+++ b/nomad/chess2online/tasks.yml
@@ -1,4 +1,12 @@
 ---
+  - name: "{{ job_name }} vault policy"
+    hashivault_policy:
+      name: chess2online
+      rules: |
+        path "kv/chess2online/config" {
+          capabilities = ["read"]
+        }
+
   - name: "{{ job_name }}"
     nomad_job:
       name: "{{ job_name }}"
