--- a/robo.actions.yml
+++ b/robo.actions.yml
@@ -1,14 +1,19 @@
-terraform-infra:
+terraform:
   summary: ensure that all cloud resources are up to date
-  command: terraform -chdir={{ .robo.path }}/infra "$@"
+  command: |
+    op=$1
+    shift
+    exec terraform -chdir={{ .terraform_path }} "$op" -var-file=${TF_WORKSPACE}.tfvars "$@"
   examples:
     - description: Preview infrastructure changes
-      command: robo terraform-infra plan
+      command: robo terraform plan
     - description: Apply infrastructure changes
-      command: robo terraform-infra apply
+      command: robo terraform apply
 
 master_ip:
-  command: robo -c {{ .robo.file }} terraform-infra output -raw master_ip
+  command: |
+    terraform -chdir={{ .terraform_path }} output -raw master_ip
+    echo
 
 ansible:
   summary: sync all configuration files on all servers
@@ -24,4 +29,5 @@ verify:
   command: ansible-playbook -u ubuntu -i $(robo -c {{ .robo.file }} master_ip), {{ .ansible_variables }} ansible/playbooks/verify.yml "$@"
 
 variables:
-  ansible_variables: -e DC=nbg1 -e wireguard_ip=172.30.0.1 -e traefik_domain=$BASE_DOMAIN
+  ansible_variables: "-e DC=nbg1 -e wireguard_ip=172.30.0.1 -e traefik_domain=$BASE_DOMAIN"
+  terraform_path: "{{ .robo.path }}/terraform"
