--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -8,6 +8,7 @@
         command: cloud-init status -w
         changed_when: no
 
+  - import_playbook: playbooks/general.yml
   - import_playbook: playbooks/vault.yml
   - import_playbook: playbooks/vault-agent.yml
   - import_playbook: playbooks/wireguard.yml
