--- a/private-server/ansible/ansible.service
+++ b/private-server/ansible/ansible.service
@@ -6,7 +6,7 @@ After=cloud-final.target
 
 [Service]
 Type=oneshot
-ExecStart=/opt/ansible/.venv/bin/ansible-pull -U https://github.com/CGamesPlay/infra -d /opt/ansible/infra -i localhost, private-server/site.yml
+ExecStart=/opt/ansible/.venv/bin/ansible-pull -U https://github.com/CGamesPlay/infra -d /opt/ansible/infra -i localhost, private-server/ansible/site.yml
 RemainAfterExit=yes
 
 [Install]
