--- a/private-server/ansible/site.yml
+++ b/private-server/ansible/site.yml
@@ -66,3 +66,9 @@
             environment:
               HOME: /home/ubuntu
             when: result.changed
+
+      - name: vault address
+        lineinfile:
+          path: /etc/environment
+          regexp: '^VAULT_ADDR='
+          line: 'VAULT_ADDR=https://vault.cluster.cgamesplay.com'
