--- a/ansible/playbooks/nomad-jobs.yml
+++ b/ansible/playbooks/nomad-jobs.yml
@@ -14,9 +14,9 @@
         vars:
           - job_dir: "../../{{ item | dirname }}"
           - job_name: "{{ item | dirname | basename | splitext | first }}"
-        # We need to ensure that the registry is loaded first because it is
-        # the dependency of many other jobs.
+        # We need to ensure that the core jobs are loaded first because they
+        # are dependencies of many other jobs.
         # NOTE: On GitHub the devs threaten to break the fileglob filter so
         # that it doesn't match '*' in directory position.
-        loop: "{{ ['nomad/registry/tasks.yml'] + ('nomad/*/tasks.yml' | fileglob | reject('search', '/registry/') | sort) }}"
+        loop: "{{ ['nomad/traefik/tasks.yml', 'nomad/registry/tasks.yml'] + ('nomad/*/tasks.yml' | fileglob | reject('search', '/registry|traefik/') | sort) }}"
         tags: always
